@@ -1,6 +1,7 @@
 Development Portal (2019-10-30 shi)
 ==============================
 Add default modalities with hover titles
+Group sectors in graph
 
 
 Development Portal (2019-10-29 shi)
